--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.16",
+    "dist": "^0.1.2",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
